; ModuleID = '/home/carl/AnghaBench/mpv/player/extr_client.c_get_mp_type.c'
source_filename = "/home/carl/AnghaBench/mpv/player/extr_client.c_get_mp_type.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.m_option = type { i32 }

@type_conv = common dso_local global %struct.m_option* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.m_option* (i64)* @get_mp_type to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.m_option* @get_mp_type(i64 %0) #0 {
  %2 = alloca %struct.m_option*, align 8
  %3 = alloca i64, align 8
  store i64 %0, i64* %3, align 8
  %4 = load i64, i64* %3, align 8
  %5 = trunc i64 %4 to i32
  %6 = load %struct.m_option*, %struct.m_option** @type_conv, align 8
  %7 = call i32 @MP_ARRAY_SIZE(%struct.m_option* %6)
  %8 = icmp uge i32 %5, %7
  br i1 %8, label %9, label %10

9:                                                ; preds = %1
  store %struct.m_option* null, %struct.m_option** %2, align 8
  br label %22

10:                                               ; preds = %1
  %11 = load %struct.m_option*, %struct.m_option** @type_conv, align 8
  %12 = load i64, i64* %3, align 8
  %13 = getelementptr inbounds %struct.m_option, %struct.m_option* %11, i64 %12
  %14 = getelementptr inbounds %struct.m_option, %struct.m_option* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = icmp ne i32 %15, 0
  br i1 %16, label %18, label %17

17:                                               ; preds = %10
  store %struct.m_option* null, %struct.m_option** %2, align 8
  br label %22

18:                                               ; preds = %10
  %19 = load %struct.m_option*, %struct.m_option** @type_conv, align 8
  %20 = load i64, i64* %3, align 8
  %21 = getelementptr inbounds %struct.m_option, %struct.m_option* %19, i64 %20
  store %struct.m_option* %21, %struct.m_option** %2, align 8
  br label %22

22:                                               ; preds = %18, %17, %9
  %23 = load %struct.m_option*, %struct.m_option** %2, align 8
  ret %struct.m_option* %23
}

declare dso_local i32 @MP_ARRAY_SIZE(%struct.m_option*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
